# Genesis

./: README.md  pyproject.toml  run_first.py
src/core/: genesis_pipeline.py
src/genesis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/ui/: app.py
